--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/Code-Of-Duty-The-Ironvengers/day-15/issues"
   },
-  "homepage": "https://github.com/Code-Of-Duty-The-Ironvengers/day-15#readme"
+  "homepage": "https://github.com/Code-Of-Duty-The-Ironvengers/day-15#readme",
+  "dependencies": {
+    "express": "^4.18.1"
+  }
 }
